gitops/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: testblog-service
  namespace: blog
spec:
  type: ClusterIP
  ports:
    - port: 80
      protocol: TCP
  selector:
    app: testblog
